turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:42: error: value += is not a member of Int
  NEXT_MOVE += 1
            ^